fix card alignment, add screen size reactivity

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -10,7 +10,7 @@
 /* Global Styles */
 html {
     box-sizing: border-box;
-    padding: 50px 0;
+    padding: 0px 0;
 }
 *, *:before, *:after {
     box-sizing: inherit;
@@ -31,10 +31,10 @@ body {
 }
 
 header {
-    overflow: hidden;
     position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
+    top: 0; 
+    left: 0;
+    width: 100%;
     background-color: var(--deep-green);
     z-index: 3;
 }
@@ -42,129 +42,73 @@ header {
 section {
     margin-bottom: 50px;
     margin-top: 100px;
-
-    background-color: rgba(0, 0, 0, 0.6);
-    border-radius: 20px;
-    padding: 20px;
 }
 
 
 h1 {
-    display: block;
+    display: flex;
     font-family: against_regular, monsterrat, "arial", sans-serif;
     color: var(--light-pink);
-    font-size: xxx-large;
-}
-
-/* home page specific styles */
-.home-page {
-    background-image: url("../images/background-home.png");
-}
-
-.home-page > section {
-    margin-right: 54%;
-}
-
-
-.shop {
-    background-image: url(../images/background-shop.png);
+    font-size: 2em;
 }
  
 /* Product page specific styles */
-.product-page > section {
-    display: block;
+ .product-page > section {
+    display: flex;
     float: right;
     text-align: right;
     margin-left: 60%;
     margin-right: 30px;
+    flex-direction: column;
 }
 
 .caretips {
-    background-image: url("../images/care-card.png");
-    background-size: contain;
-    background-position: bottom left;
-    background-repeat: no-repeat;
-    padding: 50px 0;
-    position: fixed;
+    position:absolute;
     bottom: 0;
+    left: 20px;
+    width: 400px;
+    font-size: smaller;
+}
+
+.caretips > img {
+    position: absolute;
+    bottom: 0;
+    width: 600px;
+    height: 434px;
+    z-index: -1;
 }
 
 .caretips > h1 {
     color: var(--deep-green);
-    font-weight: lighter;
-    position: relative;
-    text-align: left;
-    left: 60px;
+    font-size: 40px;
+    white-space: nowrap;
+    position:relative;
+    left: 139px;
+    z-index: 1;
+    margin-bottom: -10px;
 }
-
+.caretips > ul {
+    position:relative;
+    width: 500px;
+    margin-bottom:80px;
+    margin-top: 0;
+    left: 30px;
+}
 .caretips > ul > li {
-    color: black;
-    text-align: left;
-    margin-right: 70%;
-    margin-left: 1%;
-}
-
-.caretips > ul {margin-bottom: 25px;margin-left: 26px;}
-
-/* Product Page specific styles */
-.product-card {
-    position: relative;
-    display: flex;
-    float: left;
-    margin-right: 350px;
-    margin-bottom: 500px;
-    z-index: 0;
-}
-
-/* stle backgroun image of product card */
-.product-card > img {
-    position: absolute;
+    list-style-image: url('../images/rain.png');
     z-index: 1;
 }
 
-/* style for product image */
-.product-card > img:nth-child(2) {
-    position: absolute;
-    border-radius: 50px;
-    top: 55px;
-    left: 55px;
-    z-index: 2;
-    width: 284px;
-    height: 338;
-    box-shadow: -1px 2px 10px black;
+.caretips > ul > li:first-child {
+    list-style-image: url('../images/sun.png');
 }
 
-.product-card > button {
-    z-index: 3;
-    position: absolute;
-    top: 325;
-    left: 140;
-    box-shadow: -1px 2px 2px black;
-}
+/* shop Page specific styles */
 
-.label {
-    position: absolute;
-    top: 400px;
-    left: 110px;
-    font-size: larger;
-    z-index: 3;
-    text-shadow: -1px 2px 2px black;
-    white-space: nowrap;
-    
-    padding-left: 10px;
+.product-page > section > h1 {
+    align-self: flex-end;
 }
-
-.label > p {
-    margin-top: 10px;
-    margin-bottom: 0;
-    margin-left: 0;
-    margin-right: 0;
-}
-.price {
-    text-shadow: none;
-    padding-left: 30px;
-
-}       
+      
 /* Various Button Styles */
      
 button {
@@ -182,10 +126,16 @@ button {
 
 .btn-pink {
     background-color: var(--dark-pink);
-    color: var(--white)
+    color: var(--white);
+    font-size: larger;
 }
 
-
+.quantity {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin: 0;
+}
 .btn-plus {
     border-radius: 60px;
     padding: 10px 15px;
@@ -193,7 +143,11 @@ button {
     background-color: var(--light-pink);
     color: var(--dark-pink);
     font-weight: bold;
+    font-size: large;
     margin-right: 40px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
 }
 
 .btn-transparent, input {
@@ -210,8 +164,8 @@ header > .btn-transparent {
 }
 
 input {
-    display: inline-block;
-    width: 40px;
+    display: inline-flex;
+    width: 70px;
     border: none;
 }
 
@@ -228,11 +182,62 @@ input {
 
 }
 
-
-/* Styles for small screens */
-@media screen and (max-width: 1140px)  {
-    /* remove background when screen is wide enough */
-    .header {
-        background: none;
+@media (min-width:320px) { 
+    /* smartphones, portrait iPhone, portrait 480x320 phones (Android) */ 
+    .home-page > section {
+        margin-right: 0px;
     }
+    .home-page {
+        background-image: none;
+    }
+
+}
+@media (min-width:480px) {
+     /* smartphones, Android phones, landscape iPhone */
+     .home-page {
+        background-image: none;
+
+    }
+}
+
+
+@media (min-width:600px) { 
+    /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */ 
+    .home-page {
+        background-image: none;
+    }
+
+}
+@media (min-width:801px) { 
+    /* tablet, landscape iPad, lo-res laptops ands desktops */ 
+    /* home page specific styles */
+    /* hi-res laptops and desktops */ 
+    .home-page {
+        background-image: url("../images/background-checkout.png");
+        background-position: bottom;
+    }
+
+    .home-page > section {
+        margin-right: 0px;
+        text-align: center;
+        margin-bottom: 100px;
+    }
+}
+@media (min-width:1025px) { 
+    /* big landscape tablets, laptops, and desktops */ 
+    .home-page {
+        background-image: url("../images/background-home.png");
+        background-position: top right;
+    }
+
+    .home-page > section {
+        margin-right: 56%; 
+        text-align: left;
+    }
+
+}
+@media (min-width:1281px) { 
+    /* hi-res laptops and desktops */ 
+ 
+
 }
